# han2023

./: .gitignore  FDIcharacteristics.ipynb  GMM.ipynb  Generate Data.1.ipynb  Generate Data.ipynb  Geographical graphs(3).ipynb  Graphs.ipynb  Measurement and spatiotemporal variation trajectory of sustainable development level in Africa.ipynb  Preliminary tests.ipynb  R.ipynb  R0.ipynb  README.md  Sustainable Development Index Computing (1).ipynb  Sustainable Development Index Computing.ipynb  Untitled1.ipynb  WB_Africa.ipynb  benchmark.ipynb  data.parquet  dataset.ipynb  geo.ipynb  mechanism.ipynb  plot.ipynb  prepare.ipynb  pyproject.toml  reg.ipynb  spatial.ipynb  wdi.ipynb
