[project]
name = "han2023"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Tang Ziya", email = "tcztzy@gmail.Com" }
]
dependencies = [
    "geopandas>=0.13.2",
    "wbgapi>=1.0.12",
    "requests-cache>=1.1.0",
    "libpysal>=4.7.0",
    "matplotlib>=3.7.2",
    "spreg>=1.3.2",
    "openpyxl>=3.1.2",
    "linearmodels>=5.1",
    "scikit-learn>=1.3.0",
    "python-docx>=0.8.11",
    "esda>=2.5.0",
    # "splot>=1.1.5.post1",
    "seaborn>=0.12.2",
    "faostat>=0.1.1",
    "xlrd>=2.0.1",
    "cartopy>=0.22.0",
    "mapclassify>=2.6.1",
    "eomaps>=7.3.2",
    # "splot>=1.1.5.post1",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ipykernel>=6.25.1",
    "seaborn>=0.12.2",
    "black>=23.7.0",
]

[tool.hatch.metadata]
allow-direct-references = true
