[project]
name = "han2023"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Tang Ziya", email = "tcztzy@gmail.Com" }
]
dependencies = [
    "geopandas>=1.1.1",
    "wbgapi>=1.0.12",
    "requests-cache>=1.2.1",
    "libpysal>=4.13.0",
    "matplotlib>=3.10.6",
    "spreg>=1.8.3",
    "openpyxl>=3.1.5",
    "linearmodels>=6.1",
    "scikit-learn>=1.7.2",
    "python-docx>=1.2.0",
    "esda>=2.7.1",
    "seaborn>=0.13.2",
    "faostat>=1.1.2",
    "xlrd>=2.0.2",
    "cartopy>=0.25.0",
    "mapclassify>=2.10.0",
    "eomaps>=8.3.3",
    "pygadm>=0.5.3",
    "datashader>=0.18.2",
    "holoviews>=1.21.0",
    "fiona>=1.10.1",
    "rasterio>=1.4.3",
    "hvplot>=0.12.1",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "ruff>=0.13.1",
    "seaborn>=0.13.2",
]
